# nrlf-lambda-pipeline

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: base-ci.yml  ci.yml  release.yml
example/: conftest.py
example/api/: handler.py  index.py  response.py
example/api/tests/: __init__.py  test_api.py
example/some_third_party_lib/: some_third_party_tool.py
lambda_pipeline/: logging.py  pipeline.py  step_decorators.py  types.py
lambda_pipeline/tests/: test_logging.py  test_pipeline.py
