[tool.poetry]
name = "nrlf-lambda-pipeline"
version = "0.3.0"
description = "Robust implementation of step chaining for AWS Lambda executions"
authors = ["Joel Klinger <joel.klinger1@nhs.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NHSDigital/nrlf-lambda-pipeline"
keywords = ["aws lambda", "pipeline"]
packages = [
    { include = "lambda_pipeline" },
]
exclude = ["lambda_pipeline/tests/**/*", "lambda_pipeline/__pycache__/**/*"]


[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["email"], version = ">=2.0.3,<3"}
aws-lambda-powertools = "^2.34.0"
jmespath = "^1.0.1"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
pytest = "^8.0.2"
pre-commit = "^3.6.2"
sh = "^2.0.6"
boto3 = "^1.34.52"
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["integration: Integration tests"]

[tool.isort]
profile = "black"
